@@ -835,6 +835,9 @@ int createar_write_mainhead(csavear *save, int archtype, int fscount)
     dico_add_u32(d, 0, MAINHEADKEY_ENCRYPTALGO, g_options.encryptalgo);
     dico_add_u32(d, 0, MAINHEADKEY_FSACOMPLEVEL, g_options.fsacomplevel);
     
+    // minimum fsarchiver version required to restore that archive
+    dico_add_u64(d, 0, MAINHEADKEY_MINFSAVERSION, FSA_VERSION_BUILD(0, 6, 7, 0));
+    
     if (archtype==ARCHTYPE_FILESYSTEMS)
     {   
         dico_add_u64(d, 0, MAINHEADKEY_FSCOUNT, fscount);
